--- a/omega.html
+++ b/omega.html
@@ -3,211 +3,242 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Omega Watches – HIGH CHOICE</title>
+<title>Omega Collection – HIGH CHOICE</title>
+<link rel="icon" type="image/png" href="favicon.png">
 
 <style>
     :root {
-        --bg: #0e0f19;
-        --card: rgba(255,255,255,0.06);
-        --text: #ffffff;
-        --muted: #c1c1d2;
-        --primary: #ffb56b;
-        --primary-dark: #ff9740;
+        --bg:#0e0f19;
+        --card:rgba(255,255,255,0.08);
+        --text:#fff;
+        --muted:#bfbfd2;
+        --accent:#72c5ff;
     }
 
     body {
-        margin: 0;
-        background: var(--bg);
-        color: var(--text);
-        font-family: 'Poppins', sans-serif;
-        overflow-x: hidden;
+        margin:0;
+        background:var(--bg);
+        color:var(--text);
+        font-family:'Poppins',sans-serif;
     }
 
     header {
-        padding: 14px 20px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        background: rgba(0,0,0,0.35);
-        backdrop-filter: blur(10px);
-        position: sticky;
-        top: 0;
-        z-index: 999;
+        padding:14px 20px;
+        background:rgba(0,0,0,0.35);
+        backdrop-filter:blur(10px);
+        display:flex;justify-content:space-between;align-items:center;
+        position:sticky;top:0;z-index:999;
+        border-bottom:1px solid rgba(255,255,255,0.06);
     }
 
-    .logo {
-        font-size: 20px;
-        font-weight: 700;
-        color: var(--primary);
-    }
+    .logo {display:flex;align-items:center;gap:10px;}
+    .logo img {height:36px;}
+    .logo span {font-size:20px;font-weight:700;color:var(--accent);}
 
     .menu-btn {
-        width: 40px;
-        height: 40px;
-        background: rgba(255,255,255,0.08);
-        border-radius: 8px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 22px;
-        cursor: pointer;
+        width:40px;height:40px;border-radius:8px;
+        background:rgba(255,255,255,0.08);
+        display:flex;align-items:center;justify-content:center;
+        cursor:pointer;font-size:22px;
     }
 
-    .page-title {
-        text-align: center;
-        padding: 25px 20px 10px 20px;
-        font-size: 28px;
-        font-weight: 700;
+    #drawer {
+        position:fixed;right:-100%;top:0;width:70%;max-width:300px;
+        height:100%;background:#070b12;padding:25px;transition:.4s;z-index:900;
+    }
+    #drawer.open {right:0;}
+
+    #drawer a {
+        display:block;padding:12px 4px;
+        border-bottom:1px solid rgba(255,255,255,0.08);
+        margin-bottom:8px;font-weight:600;color:var(--text);
     }
 
-    .subtitle {
-        text-align: center;
-        margin-top: -10px;
-        color: var(--muted);
-        font-size: 15px;
+    .title {
+        text-align:center;font-size:28px;font-weight:800;margin-top:25px;
+        color:var(--accent);
     }
 
-    /* GRID */
-    .product-grid {
-        padding: 20px;
-        display: grid;
-        grid-template-columns: 1fr;
-        gap: 20px;
+    .brand-logo {display:flex;justify-content:center;margin-top:15px;}
+    .brand-logo img {height:60px;}
+
+    .models {
+        padding:20px;display:flex;flex-direction:column;gap:20px;
     }
 
-    @media (min-width: 700px) {
-        .product-grid {
-            grid-template-columns: 1fr 1fr;
-        }
+    .card {
+        background:var(--card);padding:15px;border-radius:14px;
+        border:1px solid rgba(255,255,255,0.08);
     }
 
-    @media (min-width: 1100px) {
-        .product-grid {
-            grid-template-columns: 1fr 1fr 1fr;
-        }
+    .slider {
+        position:relative;height:240px;overflow:hidden;border-radius:10px;background:#000;
     }
 
-    .product-card {
-        background: var(--card);
-        border-radius: 16px;
-        padding: 16px;
-        border: 1px solid rgba(255,255,255,0.1);
-        text-align: center;
-        transition: 0.25s;
+    .slide {
+        position:absolute;inset:0;opacity:0;transition:opacity .6s ease;
+    }
+    .slide.visible {opacity:1;}
+
+    .slide img {
+        width:100%;height:100%;object-fit:cover;border-radius:10px;
     }
 
-    .product-card:hover {
-        transform: scale(1.03);
-        border-color: var(--primary-dark);
+    .dots {display:flex;gap:6px;justify-content:center;margin-top:8px;}
+    .dot {
+        width:10px;height:10px;border-radius:50%;
+        background:rgba(255,255,255,0.3);cursor:pointer;
     }
+    .dot.active {background:var(--accent);}
 
-    .product-card img {
-        width: 100%;
-        height: 180px;
-        object-fit: cover;
-        border-radius: 12px;
-    }
+    .card h3 {margin:10px 0 6px;}
+    .price {color:var(--muted);margin-bottom:10px;font-weight:600;}
 
-    .product-name {
-        font-size: 17px;
-        margin-top: 12px;
-        font-weight: 600;
-    }
-
-    .price {
-        margin-top: 6px;
-        color: var(--primary);
-        font-size: 16px;
-        font-weight: 600;
-    }
-
-    .buy-btn {
-        margin-top: 12px;
-        background: var(--primary-dark);
-        border: none;
-        padding: 10px 16px;
-        color: #fff;
-        border-radius: 10px;
-        cursor: pointer;
-        font-size: 14px;
-        font-weight: 600;
-        width: 100%;
-    }
-
-    footer {
-        padding: 20px;
-        text-align: center;
-        color: var(--muted);
-        margin-top: 30px;
+    .btn {
+        width:100%;padding:12px;border:none;border-radius:10px;
+        font-weight:700;background:var(--accent);color:#000;cursor:pointer;
     }
 </style>
-
 </head>
+
 <body>
 
 <header>
-    <div class="logo">HIGH CHOICE</div>
-    <div class="menu-btn" onclick="location.href='men.html'">☰</div>
+    <div class="logo">
+        <img src="highchoice_logo.png">
+        <span>HIGH CHOICE</span>
+    </div>
+    <div class="menu-btn" onclick="toggleMenu()">☰</div>
 </header>
 
-<div class="page-title">Omega Collection</div>
-<div class="subtitle">Premium Omega Watches</div>
+<nav id="drawer">
+    <a href="index.html">Home</a>
+    <a href="men.html">Men</a>
+    <a href="women.html">Women</a>
+    <a href="kids.html">Kids</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+    <a href="return.html">Return & Replace</a>
+</nav>
 
-<section class="product-grid">
+<script>
+function toggleMenu(){
+    document.getElementById("drawer").classList.toggle("open");
+}
+</script>
 
-    <!-- 1 -->
-    <div class="product-card">
-        <img src="images/omega/worldmap1.jpg">
-        <div class="product-name">Omega Worldmap</div>
-        <div class="price">₹1799</div>
-        <button class="buy-btn" onclick="location.href='order.html?product=Omega Worldmap&price=1799'">Buy Now</button>
+<div class="title">Omega Collection</div>
+
+<div class="brand-logo">
+    <img src="omega_logo.png">
+</div>
+
+<section class="models">
+
+    <!-- 1. Omega Worldmap -->
+    <div class="card">
+        <div class="slider">
+            <div class="slide visible"><img src="omega_worldmap1.jpg"></div>
+            <div class="slide"><img src="omega_worldmap2.jpg"></div>
+            <div class="slide"><img src="omega_worldmap3.jpg"></div>
+        </div>
+        <div class="dots"></div>
+        <h3>Omega Worldmap</h3>
+        <div class="price">₹1799/-</div>
+        <button class="btn" onclick="location.href='order.html?model=Omega Worldmap&price=1799'">Buy Now</button>
     </div>
 
-    <!-- 2 -->
-    <div class="product-card">
-        <img src="images/omega/speedmaster.jpg">
-        <div class="product-name">Omega Speedmaster</div>
-        <div class="price">₹4299</div>
-        <button class="buy-btn" onclick="location.href='order.html?product=Omega Speedmaster&price=4299'">Buy Now</button>
+    <!-- 2. Omega Speedmaster -->
+    <div class="card">
+        <div class="slider">
+            <div class="slide visible"><img src="speedmaster1.jpg"></div>
+            <div class="slide"><img src="speedmaster2.jpg"></div>
+            <div class="slide"><img src="speedmaster3.jpg"></div>
+        </div>
+        <div class="dots"></div>
+        <h3>Omega Speedmaster</h3>
+        <div class="price">₹4299/-</div>
+        <button class="btn" onclick="location.href='order.html?model=Omega Speedmaster&price=4299'">Buy Now</button>
     </div>
 
-    <!-- 3 -->
-    <div class="product-card">
-        <img src="images/omega/seamaster.jpg">
-        <div class="product-name">Omega Seamaster</div>
-        <div the class="price">₹1899</div>
-        <button class="buy-btn" onclick="location.href='order.html?product=Omega Seamaster&price=1899'">Buy Now</button>
+    <!-- 3. Omega Seamaster -->
+    <div class="card">
+        <div class="slider">
+            <div class="slide visible"><img src="seamaster1.jpg"></div>
+            <div class="slide"><img src="seamaster2.jpg"></div>
+            <div class="slide"><img src="seamaster3.jpg"></div>
+        </div>
+        <div class="dots"></div>
+        <h3>Omega Seamaster</h3>
+        <div class="price">₹1899/-</div>
+        <button class="btn" onclick="location.href='order.html?model=Omega Seamaster&price=1899'">Buy Now</button>
     </div>
 
-    <!-- 4 -->
-    <div class="product-card">
-        <img src="images/omega/worldmap2.jpg">
-        <div class="product-name">Omega Worldmap 2</div>
-        <div class="price">₹2099</div>
-        <button class="buy-btn" onclick="location.href='order.html?product=Omega Worldmap 2&price=2099'">Buy Now</button>
+    <!-- 4. Omega Worldmap 2 -->
+    <div class="card">
+        <div class="slider">
+            <div class="slide visible"><img src="omega_worldmap2_1.jpg"></div>
+            <div class="slide"><img src="omega_worldmap2_2.jpg"></div>
+            <div class="slide"><img src="omega_worldmap2_3.jpg"></div>
+        </div>
+        <div class="dots"></div>
+        <h3>Omega Worldmap 2</h3>
+        <div class="price">₹2099/-</div>
+        <button class="btn" onclick="location.href='order.html?model=Omega Worldmap 2&price=2099'">Buy Now</button>
     </div>
 
-    <!-- 5 -->
-    <div class="product-card">
-        <img src="images/omega/seamaster_auto.jpg">
-        <div class="product-name">Omega Seamaster Automatic</div>
-        <div class="price">₹4899</div>
-        <button class="buy-btn" onclick="location.href='order.html?product=Omega Seamaster Automatic&price=4899'">Buy Now</button>
+    <!-- 5. Omega Seamaster Automatic -->
+    <div class="card">
+        <div class="slider">
+            <div class="slide visible"><img src="seamaster_auto1.jpg"></div>
+            <div class="slide"><img src="seamaster_auto2.jpg"></div>
+            <div class="slide"><img src="seamaster_auto3.jpg"></div>
+        </div>
+        <div class="dots"></div>
+        <h3>Omega Seamaster Automatic</h3>
+        <div class="price">₹4899/-</div>
+        <button class="btn" onclick="location.href='order.html?model=Omega Seamaster Automatic&price=4899'">Buy Now</button>
     </div>
 
-    <!-- 6 -->
-    <div class="product-card">
-        <img src="images/omega/sunmoon.jpg">
-        <div class="product-name">Omega Sun Moon Edition</div>
-        <div class="price">₹1799</div>
-        <button class="buy-btn" onclick="location.href='order.html?product=Omega Sun Moon&price=1799'">Buy Now</button>
+    <!-- 6. Omega Sun Moon Edition -->
+    <div class="card">
+        <div class="slider">
+            <div class="slide visible"><img src="omega_sunmoon1.jpg"></div>
+            <div class="slide"><img src="omega_sunmoon2.jpg"></div>
+            <div class="slide"><img src="omega_sunmoon3.jpg"></div>
+        </div>
+        <div class="dots"></div>
+        <h3>Omega Sun Moon Edition</h3>
+        <div class="price">₹1799/-</div>
+        <button class="btn" onclick="location.href='order.html?model=Omega Sun Moon Edition&price=1799'">Buy Now</button>
     </div>
 
 </section>
 
-<footer>
-    © 2025 HIGH CHOICE — All Rights Reserved
-</footer>
+<script>
+// slider JS
+document.querySelectorAll(".card").forEach(card=>{
+    const slider = card.querySelector(".slider");
+    const slides = slider.querySelectorAll(".slide");
+    const dotsBox = card.querySelector(".dots");
+
+    slides.forEach((slide,i)=>{
+        const dot = document.createElement("div");
+        dot.className = "dot";
+        if(i===0) dot.classList.add("active");
+
+        dot.onclick = ()=>{
+            slides.forEach(s=>s.classList.remove("visible"));
+            slides[i].classList.add("visible");
+
+            dotsBox.querySelectorAll(".dot").forEach(d=>d.classList.remove("active"));
+            dot.classList.add("active");
+        };
+
+        dotsBox.appendChild(dot);
+    });
+});
+</script>
 
 </body>
 </html>
